[project]
name = "theoremai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain<0.3",
    "langchain-community<0.3",
    "langchain-groq<0.2",
    "numexpr>=2.14.1",
    "streamlit>=1.55.0",
    "wikipedia>=1.4.0",
]
